attempt2: fix tooltip wrapping

--- a/theSrc/styles/rhtmlSankeyTree.css
+++ b/theSrc/styles/rhtmlSankeyTree.css
@@ -7,7 +7,6 @@
   font-size: 12px;
   padding: 4px;
   font-family: sans-serif;
-  white-space: nowrap;
   /*line-height: 1;
   font-weight: bold;
   padding: 12px;
@@ -96,7 +95,7 @@
     color: #efefef;
     font-size: 12px;
     margin: 2px;
-    white-space: nowrap;
+    white-space: pre;
 }
 
 
@@ -104,7 +103,7 @@
     text-align: center;
     font-family: sans-serif;
     margin-top: 4px;
-    white-space: nowrap;
+    white-space: pre;
 }
 
 .tipTable {
